# cassini

./: Cassini.sln  pyproject.toml  saturn_printer.py
Cassini.App/: App.xaml  App.xaml.cs  Cassini.App.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
Cassini.App/Components/: _Imports.razor
Cassini.App/Components/Layout/: NavMenu.razor
Cassini.App/wwwroot/: index.html
Cassini.Cli/: Cassini.Cli.csproj  Program.cs
Cassini.Printer/: Elegoo.cs  IPrinter.cs  JsonExtensions.cs  MockPrinter.cs  PrinterDiscovery.cs  Saturn4.cs
Cassini.Web/: Cassini.Web.csproj  Program.cs  _Imports.razor
Cassini.Web/Layout/: NavMenu.razor
Cassini.Web/Pages/: Printer.razor  Printers.razor
Cassini.Web/Properties/: launchSettings.json
Cassini.Web/wwwroot/: index.html  manifest.webmanifest
src/cassini/: cli.py  saturn_printer.py
