[project]
name = "cassini"
version = "0.2.0"
description = "CLI tool for controlling ELEGOO resin 3D printers over LAN via SDCP"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "alive-progress>=3.1",
    "scapy>=2.5",
]

[project.scripts]
cassini = "cassini.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cassini"]
